<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ip_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_ip">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/port_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_port"
        android:inputType="number"/>

    <EditText
        android:id="@+id/message_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_message"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_client_start"/>

    <ScrollView
        android:id="@+id/log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>